--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,15 @@ form button{
     margin-top: 10px;
     border-radius: 5px;
     border:1px solid white;
+    background-color: white;
+    cursor:pointer;
 
+}
+
+form button:hover{
+    background-color: rgb(93, 93, 195);
+    color: white;
+    cursor:pointer;
 }
 
 form a {
